--- a/style.css
+++ b/style.css
@@ -1,259 +1,79 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-size:cover;
-}
-body{
-    /* align-items: center;
-    justify-content: center;
-    position: absolute;*/
-    background-color: #C4D7FF;
-    transition: margin-right 2s .5s;
-} 
-header{
-    /* width: 100vw; */
-    height: 100vh;
-    background-image: url(sea.jpg);
-    background-size: cover;
-    background-position: bottom;
-    text-align:-webkit-center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-
-}
-.content{
-   /* margin-bottom: 150px;
-   text-align: center; */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
- a{
-text-decoration: none;
-}
-.line{
-    height: 4px;
-    /* width: 200px; */
-    background: #fc036b;
-    margin: 10px auto;
-    border-radius: 5px; 
-}
-nav{
-    text-decoration: none;
-    gap: 30px;
-    align-items: center;
-display: flex;
-}
-.learn{
-        display: flex;
-        justify-content: center;
-        background-color: #fc036b;
-        align-items: center;
-        width: 100px;
-        border-radius: 10px;
-}
-.navbar{
-    display: flex;
-    width: 170%;
-    align-items: initial;
-    flex-direction: initial;
-    justify-content: space-around;
-    gap: 30px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 20px;
-}
-.lline{
-    width: 100px;
-    height: 4px;
-    /* width: 200px; */
-    background: #fc036b;
-    margin: 4px auto;
-    border-radius: 5px; 
-}
-.ctn{
-    background-color: #fc036b;
-    padding:3px;
-    display: inline-block;
-    border-radius: 10px;
-}
-.ctn :hover{
-    /* background-color: bisque; */
-}
-.logo{
-    position: absolute;
-    margin: 10px;
-    left: 0;
-    top: 0;
-    color: rgb(0, 0, 0);
-}
-section{
-    width: 80%;
-    height: 80px;
-    /* background-color: #C4D7FF;  */
-}
-.tittle{
-    display: flex;
-    justify-content: center;
-}
-.galary{
-    /* margin: 6%; */
-    display: flex;
-    gap: 10px;
-    margin-top: 400px;
-    padding: 8px;
-    /* flex-direction: column; */
-    flex-wrap: wrap-reverse;
-}
-.in{
-    display: flex;
-    gap: 10px;
-}
-.dolor{
-    margin-top: 40vh;
-}
-.out{
-    display: flex;
-    gap: 10px;
+body {
+  background: #0b0f14;
+  color: #e5e7eb;
 }
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 60px;
+  position: fixed;
+  width: 100%;
+  background: rgba(15, 23, 42, 0.6);
+  backdrop-filter: blur(10px);
+}
 
-.amazing{
-    /* background-image: url(ian-dooley-hpTH5b6mo2s-unsplash.jpg);  */
-    background-size: cover;
-    background-position: bottom;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #6ea7cd;;
-    text-align: center;
-    font-family: math;
-    margin: 30px;
-    display: flex;
-    /* height: 400px; */
-    /* width: 500px; */
+.navbar a {
+  margin-left: 20px;
+  color: #cbd5f5;
+  text-decoration: none;
 }
-h2{
-    text-align: center;
-}
-.live{
-    width: 400px;
-    height: 380px;
-    padding: 12px;
-    /* margin-left: 700px; */
-    border: 3px solid;
-    text-align: center;
-    overflow: auto;
-}
-.row{
-    display: flex;
-    /* background-image: url(img1.jpg); */
-    align-items: center;
-    width: 100%;
-    justify-content: space-between;
-    /* background-color: #C4D7FF;  */
-    text-align: center;transition: margin-right 2s .5s;
 
+.btn {
+  background: #ff2f92;
+  padding: 8px 16px;
+  border-radius: 20px;
+  color: white;
 }
-.fics{
-    display: flex;
+
+.hero {
+  height: 100vh;
+  background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),
+  url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e");
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
-.xtra{
-    display: flex;
-    padding: 1vh;
-    justify-content: space-evenly;
-    flex-direction: row-reverse;
-    /* background-color: #C4D7FF; */
+
+.hero h2 {
+  font-size: 48px;
 }
-label {
-    font-family: sans-serif;
-    font-size: 1rem;
-    padding-right: 10px;
-  }
-  
-  select {
-    font-size: 0.9rem;
-    padding: 2px 5px;
-  }
-.like{ 
-    width: 9em;
-    height: 5ex;
-    background-color: #2289b5;
-    border: 2px solid rgb(0, 0, 0);
-    border-radius: 10px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    padding: 6px;
-    color: black;
-    cursor: pointer;
+
+.hero button {
+  margin-top: 20px;
+  padding: 12px 28px;
+  background: transparent;
+  border: 2px solid #ff2f92;
+  color: #ff2f92;
+  border-radius: 30px;
+  cursor: pointer;
 }
-.like:hover{
-    background-color: bisque
-}  
-.here{
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    align-items: center;
-    justify-content: center;
+
+.cards {
+  display: flex;
+  gap: 40px;
+  padding: 80px;
+  justify-content: center;
 }
-.type{
-    padding: 5px;
-    border: 1.5px solid rgb(0, 0, 0);
-    border-radius: 10px;
-    width: 220px;
+
+.card {
+  background: rgba(255,255,255,0.05);
+  border-radius: 20px;
+  padding: 20px;
+  width: 300px;
+  backdrop-filter: blur(15px);
 }
- .all{
-    background-color: #6ea7cd;
-    margin-left: 10px;
-    border: 2px solid #000000;
-    border-radius: 25px 3px;
-    width: 300px;
- }
- h4{
-    font-family: serif;
- }
- .h3{
-    margin: 4px;
-    padding-top: 7px;
- }
- .lliine{
-    width: 100px;
-    height: 3px;
-    /* width: 200px; */
-    background: #5f5c5c;
-    margin: 3px auto;
-    border-radius: 5px; 
- }
- .is{
-    background-color: #C4D7FF;
-    width: 400px;
-    box-shadow: 10px 10px 10px 10px #d4c7c7;
-    padding: 10px;
-    border: 2px solid white ;
-    border-radius: 20px;
-    display: grid;
-    justify-items: start;
-}
-.why{
-    padding: 2px;
-    margin: 3px;
-    border: 2px solid black;
-    border-radius: 4px;
-    width: 100px;
-}
-.how{
-    margin: 2px;
-    padding: 3px;
-    border: 2px solid black;
-    border-radius: 4px;
-    margin-left: 50px;
-    width: 100px;
-}
-.mayi :hover{
-    background-color: #6fd4ff;
-}
-.fit{
-    max-width: 2000px;
+
+.card img {
+  width: 100%;
+  border-radius: 15px;
 }
